--- a/myportal/src/main/webapp/css/guestbook.css
+++ b/myportal/src/main/webapp/css/guestbook.css
@@ -102,3 +102,9 @@ input[type="text"], input[type="password"] {
     word-break: break-all;
 }
 
+#guestbook {
+    background-color: #f9f9f9;
+    padding: 20px;
+    border-radius: 10px;
+}
+
