update css(content view height)

--- a/myportal/src/main/webapp/css/mysite.css
+++ b/myportal/src/main/webapp/css/mysite.css
@@ -25,6 +25,10 @@ ul, ol {
 
 #content {
   float: right;
+  
+  height: 80vh;
+  overflow: auto;
+   
   width: 580px;
   background-color: #fff;
 }
